:bug: Overflow duo image

--- a/styles/_components.blocks.scss
+++ b/styles/_components.blocks.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   margin: 3rem 0;
+  overflow: hidden;
 
   @include mq(bp3) {
     flex-direction: row;
